# RTk.GPIO

./: CMakeLists.txt  README.md  WiringPi.h  WiringPiSPI.h  gpio.cpp  gpio.h
examples/: CMakeLists.txt  README.md
examples/23lc1024/: CMakeLists.txt  main.cpp
examples/dac_adc/: CMakeLists.txt  main.cpp
examples/lcd_st7735s/: CMakeLists.txt  main.cpp
examples/leds/: CMakeLists.txt  main.cpp
examples/spi/: CMakeLists.txt  main.cpp
firmware/: README.md  firmware.cpp
